set list style to non to fix some elements being pushed down and clipping on icons

--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ ul {
   align-items: center;
 }
 
+li {
+  list-style: none;
+}
+
 a {
   text-decoration: none;
   color: black;
